[metadata]
name = extraction
version = 0.0.1
home-page =
description = Provide utilities to run extraction
long-description = file: README.rst, CHANGELOG.rst
license = Proprietary
license-file = LICENSE
platform = Linux
classifiers =
    Development Status :: 2 - Pre-alpha
    License :: Other/Proprietary License
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6.3
packages = find:
package_dir =
    =src
scripts =
install_requires =
    pytest
    jinja2
    boltons
    pdk-environment @ git+https://github.com/intel-restricted/applications.manufacturing.intel.process-design-kit.infrastructure.devops.pdk-environment.git@master
    waldo @ git+https://github.com/intel-restricted/applications.manufacturing.intel.process-design-kit.infrastructure.devops.de-pdk-automation.git@develop#subdirectory=packages/waldo
    waldo-tools @ git+https://github.com/intel-restricted/applications.manufacturing.intel.process-design-kit.infrastructure.devops.de-pdk-automation.git@develop#subdirectory=packages/waldo-tools
    wtool-extract @ git+https://github.com/intel-restricted/applications.manufacturing.intel.process-design-kit.infrastructure.devops.de-pdk-automation.git@develop#subdirectory=packages/wtool-extract

    ; pyitk @ git+https://github.com/intel-restricted/applications.manufacturing.intel.process-design-kit.infrastructure.devops.pyitk.git@v0.8.0

[options.packages.find]
where =
    src
exclude =
    contrib
    docs
    test*
    requirements.*
